2008-06-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-08
	* handle restarted EP: if an event has timed-out and the assigned
	process id is assigned to another cell as well, write the event to
	the error stream and discard it.

2008-05-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-07
	* SMProxy::sendInitMessage() puts the outModId into message header
	* needs EventFilter/Utilities V00-14-09

2008-03-14  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-09-06
	* default broker to use TCS partition-dependent trigger number

2008-03-14  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-09-05
	* timeout when processKiller disabled now generates info message

2008-03-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-04
	* do not increment counters within debug messages (reported by
	Kurt)

2008-02-27  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-09-03
	* introduced boolean parameter to switch off process killing
	* set application hyperdaq icon to new location

2008-02-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-02
	* fix bug spotted by Gerry: doFedIdCheck wouldn't be properly
	propageted to FUResource.

2008-02-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-01
	* fix bug spotted by Kurt

2008-01-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-09-00
	* FUResourceTable::handleErrorEvent() added, used
	FUShmBuffer::writeErrorEventData() to transport raw events
	directamente to the storage manager
	* SMProxy et al include new parameter 'outModId' for the sending of
	regular event data

2008-01-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-08-01
	* remove doublicated publication of 'nbRawCells' parameter to info
	spaces

2007-12-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-08-00
	* based on EventFilter/ShmBuffer V00-05-00